--- a/js-practice.html
+++ b/js-practice.html
@@ -39,6 +39,60 @@
 
     let name = firstName + " " + middleName + " " + lastName;
       console.log(name); 
+
+      //strings on my own
+      let greeting = "My name is " + name; 
+      console.log(greeting); 
+
+      console.log("Using functions:");
+
+      // function to make square numbers
+      function makeSquare(theNumb) {
+      let squared = theNumb * theNumb
+      return squared;
+      }
+      console.log(makeSquare(20));
+
+      let try01 = makeSquare(20);
+      console.log(try01);
+
+      //functions on my own
+      function makeName(fName, mName, lName) {
+      let fullName = fName + '' + mName + '' + lName
+      return fullName;
+        }
+        console.log(makeName("My", "Whole", "Name")); 
+        console.log(makeName("Robert", "\"Beto\"", "O'Rourke")); 
+
+
+        // Make a name with middle initial
+        function makeBetterName(firstName, middleName, lastName) {
+        if (middleName.length === 1) {
+          middleName = middleName + ".";
+          let fullName = firstName + " " + middleName + " " + lastName;
+          return fullName;
+        } else {
+          let fullName = firstName + " " + middleName + " " + lastName;
+          return fullName;
+         }
+        }
+        console.log(makeBetterName("Joan", "Marie", "Larkin"));
+        console.log(makeBetterName("John", "F", "Kennedy"));
+
+        function gameResult(home, away) {
+          if (home > away) {
+            return 'The home team won';
+          } else if (home === away) {
+          return 'They tied';
+          } else {
+         return 'The away team won'; 
+         } 
+        }
+       console.log(gameResult(4,2));   
+       console.log(gameResult(2,4));
+       console.log(gameResult(2,2));
+
+
     </script>
 </body>
 </html>
